apply plugin: 'java'
apply plugin: 'maven-publish'

sourceCompatibility = 1.8
targetCompatibility = 1.8
buildDir="build_gradle"

group = 'itx.rpi.hardware'
version = '1.0.0'

repositories {
   mavenLocal()
   mavenCentral()
}

dependencies {
   implementation 'com.pi4j:pi4j-core:1.1'
}

jar {
    archiveBaseName = 'itx-rpi-drivers'
}

task jarSources(type: Jar, dependsOn: classes) {
    archiveClassifier = 'sources'
    archiveBaseName = 'itx-rpi-drivers'
}

task jarJavadoc(type: Jar, dependsOn: javadoc) {
    archiveClassifier = 'javadoc'
    archiveBaseName = 'itx-rpi-drivers'
}

artifacts {
  archives jar
  archives jarSources
  archives jarJavadoc
}

